<resources>
    <string name="app_name">MYMAD</string>
    <string name="welcome">Welcome</string>
    <string name="vibe_sphere">Vibe Sphere</string>
    <string name="get_started">GET STARTED</string>
    <string name="forgot_my_password"><u>Forgot my password?</u></string>
    <string name="password">Password</string>
    <string name="dont_have_an_account"><u>Dont have an account</u></string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="johnson">Johnson</string>
    <string name="search">Search</string>
    <string name="view_all"><u>View All</u></string>

</resources>